--- a/Style.css
+++ b/Style.css
@@ -75,6 +75,7 @@ p {
     border: 1px solid #e74c3c;
     border-radius: 10px;
     box-shadow: 10px 10px 15px rgb(0 0 0 / 20%);
+    /* text-decoration: none; */
 }
 
 .inside-space {
@@ -176,4 +177,8 @@ input[type='text'] {
     .card1{
         min-width: 100%;
     }
+}
+
+a{
+    text-decoration: none;
 }
